--- a/src/components/FeedbackOptions/FeedbackOptions.module.css
+++ b/src/components/FeedbackOptions/FeedbackOptions.module.css
@@ -7,7 +7,8 @@
   text-align: center;
 
   font-family: 'Sriracha', cursive;
-  margin-top: 50px;
+  margin-top: 20px;
+  margin-bottom: 30px;
 
   color: #26474e;
 }
